--- a/src/client/src/App.scss
+++ b/src/client/src/App.scss
@@ -1,6 +1,6 @@
 body {
     background: radial-gradient(circle, #525252 5%, transparent 11%);
-        background-size: 3em 3em;
-        background-color: #10070f;
-        opacity: 1
+    background-size: 3em 3em;
+    background-color: #10070f;
+    opacity: 1;
 }
