--- a/src/client/src/Components/Lobby/LobbyCodeBlock/LobbyCodeBlock.scss
+++ b/src/client/src/Components/Lobby/LobbyCodeBlock/LobbyCodeBlock.scss
@@ -4,7 +4,7 @@
     margin: 10px;
     border-radius: 9px;
     height: 180px;
-    width: 300px;
+    width: 400px;
     &:hover {
         cursor: pointer;
         background-color: #1d0c1c;
@@ -13,15 +13,23 @@
         text-align: center;
         h3 {
             margin: 10px;
-            
         }
     }
     hr {
         width: 85%;
         border-color: #525252;
     }
-    .code-snippet{
-        margin-left: 15px;
-        margin-top: 15px;
+    .code-snippet {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow-y: scroll;
+        
+        .lobby-code-block-readonly {
+            width: 370px;
+            height: 120px;
+        }
     }
 }
+
+
